# ripio_faucet_challenge

./: .pre-commit-config.yaml  README.md  pyproject.toml
config/: celery.py  env.py  settings.py  urls.py  w3_init.py
faucet/: admin.py  serializers.py  tasks.py  urls.py  views.py
faucet/migrations/: 0001_initial.py  0002_wallet_nonce.py  0003_transaction_wallet_maxfeepergas.py  0004_transaction_gasused.py
faucet/models/: __init__.py  transaction.py  wallet.py
faucet/services/: transaction_service.py  wallet_service.py
faucet/tests/: test_transaction_serialzer.py  test_views.py  test_wallet_service.py
