[tool.poetry]
name = "ripio-faucet-callenge"
version = "0.1.0"
description = ""
authors = ["FDSoftware <dfrenoux@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
web3 = "^7.13.0"
django-environ = "^0.12.0"
dj-database-url = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
